# cmake-demo

./: Test.cpp  settings.json
test/: CMakeCache.txt  CMakeLists.txt  Makefile  MyApp  cmake_install.cmake  main.cpp
